# Flowlet

./: .dockerignore  .gitignore  AGENTS.md  Flowlet.code-workspace  README.md  README.zh-CN.md  TODO.md  package-lock.json
docker/: .env.flowlet  .env.flowlet.example  Caddyfile  Caddyfile.ip  Dockerfile.backend  Dockerfile.frontend  docker-compose-keycloak.yml  docker-compose.full.yml  docker-compose.ip.yml  docker-compose.local.yml  entrypoint-backend.sh  ip-certgen.sh  nginx-ip.conf  test-kafka.sh
docs/: AUTH_SYSTEM.md  CODE_NODE.md  COMPLETE_TEST_GUIDE.md  DATA_STRUCTURE_DESIGN.md  DEPLOY_GUIDE.md  DEPLOY_SCRIPTS.md  DOCKER_DEPLOY.md  DOMAIN_HTTPS_DEPLOY.md  IP_PORT_DEPLOY.md  NEWS_GROUP.md  OIDC_MIGRATION_GUIDE.md  TRANSFORM_NODE_GUIDE.md  TRANSFORM_NODE_IMPROVEMENT.md  VSCODE_SETUP.md  init.prompt
flowlet-backend/: pom.xml
flowlet-code-executor/: Dockerfile  README.md  app.py
flowlet-embedding/: README.md  pyproject.toml  requirements.txt  test_similarity.py  test_text_bge.py  test_visual_bge.py  test_visual_bge_m3.py
flowlet-frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
flowlet-mock-service/: Dockerfile  README.md  app.py
flowlet-vector-stores/: Dockerfile  README.md  USAGE_EXAMPLES.md  main.py  pyproject.toml
flowlet-vector-stores/app/: factory.py  main.py  models.py
flowlet-vector-stores/app/providers/: __init__.py  base.py  milvus.py  qdrant.py
scripts/: flowlet-deploy.sh  flowlet-docker.sh  flowlet-domain-caddy.sh  flowlet-domain-config.sh  flowlet-domain-nginx.sh  flowlet-domain-openresty.sh  (+2 more)
(+412 files in other folders)
